--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "CHOKIDAR_USEPOLLING=true nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
     "nodemon": "^1.14.7"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "morgan": "^1.10.0",
+    "volleyball": "^1.5.1"
   }
 }
